# horsetab

./: Cargo.toml  README.md  clippy.toml
assets/: default_config.conf
src/: api_client.rs  cli.rs  click_length_detector.rs  click_sequence_detector.rs  cmd.rs  cmd_parser.rs  command_execution.rs  constants.rs  event_observe.rs  ipc_tcp.rs  logger.rs  main.rs  main_threads.rs  sequence_automata.rs  server.rs  util.rs
src/cli/: main.rs  subcommands.rs
src/main_threads/: automata_manager.rs  commands_installer.rs  mouse_events.rs  results_command_exec.rs
src/server/: automata_manager.rs  commands_installer.rs  config_file_parser.rs  controller.rs  event_observe.rs  global_context.rs  global_context_installer.rs  http.rs  main.rs  mouse_events.rs  process_manager.rs  results_command_exec.rs
