[package]
name = "horsetab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.75"
rouille = "3.6.2"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
edit = "0.1.4"
regex = "1.10.2"
rdev = "0.5.3"

[dev-dependencies]
test-case = "3.2.1"
