[package]
name = "horsetab"
version = "0.3.14"
edition = "2021"
repository = "https://github.com/ChrisVilches/horsetab"
description = "Trigger Linux/Unix commands via morse code using your mouse."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.75"
rouille = "3.6.2"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
edit = "0.1.4"
regex = "1.10.2"
rdev = "0.5.3"
home = "0.5.5"
colored = "2.0.4"
tempfile = "3"
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
test-case = "3.2.1"
